fixed random ACL issue

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,5 +1,5 @@
 global
-        log 127.0.0.1   local0
+		log 127.0.0.1   local0
         log 127.0.0.1   local1 notice
         #log loghost    local0 info
         maxconn 4096
@@ -9,7 +9,7 @@ global
         daemon
         #debug
         #quiet
-
+ 
 defaults
         log     global
         mode    tcp
@@ -28,39 +28,44 @@ defaults
         #srvtimeout      50000
 
 frontend stat
-        bind 10.10.10.106:8989
-        mode http
-        stats enable
-        stats uri /stats
-        stats realm HAProxy\ Statistics
-        stats auth admin:admin
+		bind 192.168.57.12:8989
+		mode http
+		stats enable
+		stats uri /stats
+		stats realm HAProxy\ Statistics
+		stats auth admin:admin 
 
 frontend www1
-        bind 10.10.10.221:80
-	acl group1 hdr(group) 1
-	acl group2 hdr(group) 2
-	use_backend group1 if group1
-	use_backend group2 if group2
-        default_backend web_pool
+		bind 192.168.57.241:80
+		mode http
+		option httpclose
+		acl group1 hdr(group) 1
+		acl group2 hdr(group) 2
+		use_backend group1 if group1
+		use_backend group2 if group2
+		default_backend web_pool
 
 frontend www2
-        bind 10.10.10.222:80
-        acl group1 hdr(group) 1
-        acl group2 hdr(group) 2
-	use_backend group1 if group1
-	use_backend group2 if group2
-        default_backend web_pool
+		bind 192.168.57.242:80
+		mode http
+		option httpclose
+		acl group1 hdr(group) 1
+		acl group2 hdr(group) 2
+		use_backend group1 if group1
+		use_backend group2 if group2
+		default_backend web_pool
 
 backend group1
-        server web1 10.10.10.106:8080 
+		mode http
+		server web1 192.168.57.22:80
 
 backend group2
-        server web2 10.10.10.107:8080 
+		mode http
+		server web2 192.168.57.25:80
 
 backend web_pool
-        balance roundrobin
-        mode tcp
-        server web1 10.10.10.106:8080 check fall 3 rise 2
-        server web2 10.10.10.107:8080 check fall 3 rise 2
-#        server web3 10.10.10.3:80 
+		balance roundrobin
+		mode http
+		server web1 192.168.57.22:80 check
+		server web2 192.168.57.25:80 check 
 
