--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -2,7 +2,7 @@ global
 	log 127.0.0.1   local0
         log 127.0.0.1   local1 notice
         #log loghost    local0 info
-	# comment line
+	# comment line 1
         maxconn 4096
         #chroot /usr/share/haproxy
         user haproxy
